Generate OpenAPI spec v3 from swagger 2.0
